[package]
name = "filestructure-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Dulfer"]
repository = "https://github.com/Rafaeltheraven/filestructure-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = {version = "^1.0.80", optional = true}
prettyplease = {version = "^0.2.20", optional = true}
syn = {version = "^2.0.59", optional = true}

[features]
tokenstream2 = ["dep:proc-macro2", "dep:prettyplease", "dep:syn"]
